<resources>
    <string name="app_name">EstimateIT!</string>
    <string name="progress_loading_text">Loading data...</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="blank_edit_text_error">This field can not be blank</string>
    <string name="create_room">create room</string>
    <string name="table_name">table name</string>
    <string name="create">create</string>
    <string name="join_room">join room</string>
    <string name="table_id">table id</string>
    <string name="join">join</string>
    <string name="ready">ready</string>
    <string name="room">Room</string>
    <string name="choose_card">Choose card</string>
    <string name="registration">Registration</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm password</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="wrong_login_password">Wrong login or password</string>
    <string name="final_table">final table</string>
    <string name="average">average:</string>
    <string name="ready_for_next_estimation">ready for next estimation</string>
    <string name="choose">choose</string>
    <string name="check">check</string>
    <string name="uncheck">uncheck</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="register_new_account">Register new account</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="account_created">Account created!</string>
    <string name="email">email</string>
    <string name="email_is_not_correct">Email is not correct</string>
    <string name="cannot_download_server_address">Cannot download server address</string>
    <string name="room_id">Room ID:</string>
    <string name="cannot_download_participants_list">Cannot download participants list</string>
    <string name="cannot_change_ready_status">Cannot change ready status</string>
    <string name="start_game">start game</string>
    <string name="not_all_users_are_ready">Not all users are ready to play!</string>
    <string name="cannot_check_game_status">Cannot check game status</string>
    <string name="cannot_kick_participant">Cannot kick participant</string>
    <string name="cannot_send_answer">Cannot send answer</string>
    <string name="cannot_check_if_game_is_finished">Cannot check if game is finished</string>
    <string name="set_task_name">set task name</string>
    <string name="next_estimation_topic_colon">Next estimation topic:</string>
    <string name="next_estimation_topic">Next estimation topic</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set_next_estimation_topic">Set next estimation topic</string>
    <string name="back_to_room">Back to Room</string>
    <string name="topic">Topic:</string>
    <string name="can_not_set_task_name">Can not set task name</string>
</resources>
