<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogVisitAppointed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorTransparentBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/rounded_card_white"
        android:elevation="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_next_estimation_topic"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <com.rey.material.widget.EditText
            android:id="@+id/nextEstimationTopicEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/next_estimation_topic"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:et_supportMaxChars="20"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorGray"
            app:et_supportMode="helper"
            app:et_supportTextColor="@android:color/black" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.rey.material.widget.Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_frame_gray"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:rd_cornerRadius="15dp"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimaryLight"
                app:rd_rippleType="wave" />

            <com.rey.material.widget.Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_frame_blue"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:rd_cornerRadius="15dp"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimaryLight"
                app:rd_rippleType="wave" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>