<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/registration"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <com.rey.material.widget.EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/login"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:touchscreenBlocksFocus="true"
                app:et_dividerColor="@color/colorGray"
                app:et_dividerErrorColor="@color/colorError"
                app:et_dividerHeight="2dp"
                app:et_labelEnable="true"
                app:et_labelTextColor="@color/colorGray"
                app:et_supportMode="helper"
                app:et_supportTextColor="@android:color/black"
                app:et_supportTextErrorColor="@color/colorError" />

            <com.rey.material.widget.EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"

                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:imeOptions="actionSearch"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:touchscreenBlocksFocus="true"
                app:et_dividerColor="@color/colorGray"
                app:et_dividerErrorColor="@color/colorError"
                app:et_dividerHeight="2dp"
                app:et_labelEnable="true"
                app:et_labelTextColor="@color/colorGray"
                app:et_supportMode="helper"
                app:et_supportTextErrorColor="@color/colorError" />

            <com.rey.material.widget.EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:imeOptions="actionSearch"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:touchscreenBlocksFocus="true"
                app:et_dividerColor="@color/colorGray"
                app:et_dividerErrorColor="@color/colorError"
                app:et_dividerHeight="2dp"
                app:et_labelEnable="true"
                app:et_labelTextColor="@color/colorGray"
                app:et_supportMode="helper"
                app:et_supportTextErrorColor="@color/colorError" />

        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@color/colorDarkGray"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>