<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorLightBlue"
        android:orientation="vertical">

        <com.tsdproject.pokerplanning.model.customviews.RobotoMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/final_table"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:src="@drawable/cards" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/resultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:scrollbars="none" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorAlternativeBlue">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.tsdproject.pokerplanning.model.customviews.RobotoLightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/average"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="21sp" />

            <com.tsdproject.pokerplanning.model.customviews.RobotoMediumTextView
                android:id="@+id/averageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorLightBlue">

        <com.tsdproject.pokerplanning.model.customviews.RobotoLightButton
            android:id="@+id/backToRoomButton"
            android:textAllCaps="true"
            android:background="@drawable/rounded_card_white"
            android:layout_width="140dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:layout_height="40dp"
            android:text="@string/back_to_room"
            app:rd_cornerRadius="15dp"
            app:rd_enable="true"
            app:rd_rippleColor="@color/colorPrimaryLight"
            app:rd_rippleType="wave"/>

    </FrameLayout>

</LinearLayout>